# phoenix

./: .gitignore  .gitmodules  LICENSE  README  README.md  TODO.txt
Nyx/: application.cpp  application.h  config.h  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  particlefx.cpp  particlefx.h  scene.cpp  scene.h  window.cpp  window.h  window_state.cpp  window_state.h
Nyx/Cache/: iresources.h  resource.cpp  resource.h  resource_cache.cpp  resource_cache.h
Nyx/Events/: event_manager.cpp  event_manager.h  events.cpp  events.h  ievent.h
Nyx/Math/: constants.h  matrix3x3.cpp  matrix3x3.h  matrix4x4.cpp  matrix4x4.h  quaternion.cpp  quaternion.h  vector2.cpp  vector2.h  vector3.cpp  vector3.h  vector4.cpp  vector4.h
Nyx/Physics/: body.cpp  body.h  iphysics_engine.h  physics_engine.cpp  physics_engine.h  rigid_body.cpp  rigid_body.h  soft_body.cpp  soft_body.h
Nyx/Projects/osx/Nyx.xcodeproj/: project.pbxproj
Nyx/Projects/osx/Nyx.xcodeproj/project.xcworkspace/xcuserdata/riccardomarson.xcuserdatad/: UserInterfaceState.xcuserstate
Nyx/Projects/osx/Nyx.xcodeproj/xcuserdata/riccardomarson.xcuserdatad/xcschemes/: Nyx.xcscheme  xcschememanagement.plist
Nyx/Projects/vs/: Nyx.vcxproj  Nyx.vcxproj.filters
Nyx/Projects/vs2015/: CMakeLists.txt  Nyx.vcxproj  Nyx.vcxproj.filters
Nyx/Renderer/: effect.cpp  effect.h  fx_manager.cpp  fx_manager.h  index_buffer.h  irenderer.h  render_buffer.h  render_factory.h  shader_uniform.cpp  shader_uniform.h  shader_utils.cpp  shader_utils.h  texture.h  vertex_array_object.h  vertex_buffer.h
Nyx/Renderer/d3d/: d3d11_effect.cpp  d3d11_effect.h  d3d11_index_buffer.cpp  d3d11_index_buffer.h  d3d11_render_buffer.cpp  d3d11_render_buffer.h  d3d11_renderer.cpp  d3d11_renderer.h  d3d11_shader_utils.cpp  d3d11_shader_utils.h  d3d11_texture.cpp  d3d11_texture.h  d3d11_vertex_array_object.cpp  d3d11_vertex_array_object.h  d3d11_vertex_buffer.cpp  d3d11_vertex_buffer.h  d3d_renderer.h
Nyx/Renderer/ogl/: gl_index_buffer.cpp  gl_index_buffer.h  gl_render_buffer.cpp  gl_render_buffer.h  gl_renderer.cpp  gl_renderer.h  gl_texture.cpp  gl_texture.h  gl_utils.cpp  gl_utils.h  gl_vertex_array_object.cpp  gl_vertex_array_object.h  gl_vertex_buffer.cpp  gl_vertex_buffer.h  glsl_effect.cpp  glsl_effect.h  glsl_shader_utils.cpp  glsl_shader_utils.h
Nyx/Scene/: camera_fp.cpp  camera_fp.h  camera_node.cpp  camera_node.h  camera_tp.cpp  camera_tp.h  frustum.cpp  frustum.h  light_node.cpp  light_node.h  mesh_node.cpp  mesh_node.h  model_node.cpp  model_node.h  particle_node.cpp  particle_node.h  root_node.cpp  root_node.h  scene_node.cpp  scene_node.h  skybox.cpp  skybox.h
Nyx/Script/: script_manager.cpp  script_manager.h  script_manager_new.cpp  script_manager_new.h
Nyx/UI/: label.cpp  label.h  ui_events.h  ui_manager.cpp  ui_manager.h  widget.cpp  widget.h
Nyx/Utils/: file_manager.cpp  file_manager.h  hash.cpp  hash.h  log_manager.cpp  log_manager.h  singleton.h
Projects/osx/phoenix.xcworkspace/: contents.xcworkspacedata
Projects/osx/phoenix.xcworkspace/xcshareddata/: phoenix.xccheckout
Projects/osx/phoenix.xcworkspace/xcuserdata/riccardomarson.xcuserdatad/: UserInterfaceState.xcuserstate
Projects/osx/phoenix.xcworkspace/xcuserdata/riccardomarson.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Projects/vs/: Phoenix.sln
Projects/vs/luaplus-static/: luaplus-static.vcxproj  luaplus-static.vcxproj.filters
Projects/vs/stb/: stb.vcxproj  stb.vcxproj.filters
Projects/vs2015/: Phoenix.sln  Phoenix.vcxproj
Projects/vs2019/: CMakeLists.txt
Resources/: create_dest_tree.bat
Resources/FXKernels/: particle_fountain.cl
Resources/Models/: Cube.mtl  Marble.mtl  Mars.mtl  Particle1.mtl
Resources/Scripts/: camera_anim.lua  particle_fountain.lua
Resources/Shaders/: Basic.shader  BasicParticle.shader  CubeMapReflection.shader  Flat.shader  SkyBox.shader  UIShader.shader
Resources/Shaders/old/: BasicParticleShader.xml  BasicShader.xml  FlatShader.xml  ReflectionShader.xml  SkyBoxShader.xml
Resources/Shaders/old/glsl/: BasicParticle.fs  BasicParticle.gs  BasicParticle.vs  BasicShader.fs  BasicShader.vs  CubeMapReflection.fs  CubeMapReflection.vs  FlatShader.fs  FlatShader.vs  SkyBox.fs  SkyBox.vs
Resources/Shaders/old/hlsl11/: BasicShader.fx  FlatPixelShader.hlsl  FlatShader.fx  FlatVertexShader.hlsl
Resources/Shaders/old/hlsl9/: BasicShader.fx  FlatShader - Copia.fx  FlatShader.cod  FlatShader.fx  FlatShader.fxo
Resources/Textures/: credits.txt
tests/Demo/: config.h  demo.cpp  particle_test.cpp  particle_test.h  physics_test.cpp  physics_test.h  space_scene.cpp  space_scene.h
tests/Demo/Data/: config.json  particle test.json  physics test.json  space scene.json
tests/Demo/Projects/osx/: Info.plist
tests/Demo/Projects/osx/PhoenixDemo.xcodeproj/: project.pbxproj
tests/Demo/Projects/osx/PhoenixDemo.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
tests/Demo/Projects/osx/PhoenixDemo.xcodeproj/project.xcworkspace/xcuserdata/riccardomarson.xcuserdatad/: UserInterfaceState.xcuserstate
tests/Demo/Projects/osx/PhoenixDemo.xcodeproj/xcuserdata/riccardomarson.xcuserdatad/xcschemes/: PhoenixDemo.xcscheme  xcschememanagement.plist
tests/Demo/Projects/vs/: Demo.vcxproj  Demo.vcxproj.filters
tests/Demo/Projects/vs2015/: CMakeLists.txt  Demo.vcxproj  Demo.vcxproj.filters
